10-Ingress-Context-Path-Based-Routing/mymanifest/ingress-manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
    - http: 
        paths:
          - path: /app1/
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-svc
                port:
                  number: 80
          - path: /app2/
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-svc
                port:
                  number: 80
